--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,3 @@
-@import "./ui/ContainerWithHeader.scss";
-@import "./ui/ContainerWithScroll.scss";
-@import "./ui/UIModal.scss";
-@import "./ui/UISettingTab.scss";
-
-// Reset the blend mode of the preview.
-// The rendering of the callouts will be broken unless this is reset.
-.callout.callout-manager-preview {
-	mix-blend-mode: unset !important;
-}
+@import "./settings/CMSettingTab.scss";
+@import "./settings/ManageCalloutsPane.scss";
+@import "./callout-preview.scss";
