--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
 @import "./settings/CMSettingTab.scss";
 @import "./settings/ManageCalloutsPane.scss";
+@import "./settings/EditCalloutPane.scss";
+@import "./settings/EditCalloutPane_Info.scss";
 @import "./callout-preview.scss";
