--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 @import "./settings/CMSettingTab.scss";
 @import "./settings/ManageCalloutsPane.scss";
 @import "./settings/EditCalloutPane.scss";
+@import "./settings/EditCalloutPane_Preview.scss";
 @import "./settings/EditCalloutPane_Info.scss";
+@import "./settings/EditCalloutPane_Appearance.scss";
 @import "./callout-preview.scss";
