--- a/src/settings/EditCalloutPane_Appearance.scss
+++ b/src/settings/EditCalloutPane_Appearance.scss
@@ -1,6 +1,11 @@
 .callout-manager-edit-callout-section--appearance {
 }
 
+.callout-manager-edit-callout--setting-cleared {
+	
+}
+
+
 // The preview showing the complex callout setting JSON.
 .callout-manager-edit-callout--complex-json pre {
 	border: rgba(var(--background-modifier-border)) 1px solid;
