--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,8 @@
 @import "./settings/EditCalloutPane_Preview.scss";
 @import "./settings/EditCalloutPane_Info.scss";
 @import "./settings/EditCalloutPane_Appearance.scss";
+
+@import "./settings/setting/";
+@import "./settings/component/";
+
 @import "./callout-preview.scss";
