--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,5 +7,6 @@
 
 @import "./settings/setting/";
 @import "./settings/component/";
+@import "./settings/pane/";
 
 @import "./callout-preview.scss";
